--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-firebase/storage": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.17",
     "@react-navigation/material-bottom-tabs": "^6.2.25",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.26",
     "expo": "~50.0.11",
     "expo-blur": "^12.9.2",
+    "expo-file-system": "^16.0.8",
     "expo-image-picker": "~14.7.1",
+    "expo-modules-core": "^1.11.10",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-base64": "^0.2.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
