--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.26",
     "expo": "~50.0.11",
-    "expo-blur": "^12.9.2",
     "expo-file-system": "^16.0.8",
     "expo-image-picker": "~14.7.1",
     "expo-modules-core": "^1.11.10",
@@ -25,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-base64": "^0.2.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
