--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.25",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.26",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.11",
     "expo-file-system": "^16.0.8",
     "expo-image-picker": "~14.7.1",
