--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-base64": "^0.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-tabs": "^0.10.4",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
