--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-modules-core": "^1.11.10",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
+    "openai": "^4.33.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-base64": "^0.2.1",
