--- a/package.json
+++ b/package.json
@@ -6,7 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "<rootDir>/jestSetup.js"
+    ],
+    "moduleNameMapper": {
+      "^@env$": "<rootDir>/__mocks__/@env.js"
+    },
+    "transform": {
+      "^.+\\.(js|ts|tsx)$": "babel-jest"
+    }
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
@@ -16,18 +29,19 @@
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.26",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@testing-library/react": "^14.2.2",
     "expo": "~50.0.11",
     "expo-file-system": "^16.0.8",
     "expo-image-picker": "~14.7.1",
     "expo-modules-core": "^1.11.10",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
+    "jest": "^29.3.1",
     "openai": "^4.33.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-base64": "^0.2.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-paper-tabs": "^0.10.4",
@@ -37,10 +51,17 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.24.4",
+    "@testing-library/react-native": "^12.4.5",
+    "babel-jest": "^29.7.0",
+    "jest-expo": "^50.0.4",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
